--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <!-- Website Icon -->
     <link rel="shortcut icon" href="/images/dashboard.png" type="image/x-icon">
     <!-- Normalizing File -->
-    <link rel="stylesheet" href="/css/normalize.css" />
+    <link rel="stylesheet" href="css/normalize.css" />
     <!-- Font Awesome Library -->
-    <link rel="stylesheet" href="/css/all.min.css" />
+    <link rel="stylesheet" href="css/all.min.css" />
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -18,7 +18,7 @@
       rel="stylesheet"
     />
     <!-- Main CSS File -->
-    <link rel="stylesheet" href="../Dashboard/css/main.css" />
+    <link rel="stylesheet" href="css/main.css" />
     <title>TCourse</title>
   </head>
   <body>
